# triton-fastapi

./: .gitignore  main.sh  pyproject.toml
app/: routes.py
inference_server/frontend/: chatbot  metrics  pyproject.toml
inference_server/models/triton-phi-4/: config.pbtxt  download_model.py  generate_triton_config.py  nao_esquecer
inference_server/test/: test.py
inference_server/vllm/: dockerfile
inference_server/vllm/vllm/entrypoints/openai/: api_server.py
middleware/: README.md  pyproject.toml
middleware/src/: __init__.py  core.py  database.py  routes.py  schemas.py
scripts/: install.sh  start.sh
scripts/install/: common_deps.sh  docker.sh  nvidia.sh  python.sh  triton.sh  vllm.sh
scripts/runner/: start_inference.sh
